Added user collection, attempted to add oath
