# routes/index.js
@@ -3,6 +3,6 @@ const router = express.Router();
 
 router.use('/', require('./swagger'));
 router.use('/undead', require('./undead'));
-//router.use('/recreants', require('./recreants'));
+router.use('/user', require('./user'));
 
 module.exports = router;
